src/objects/CPA_Order_Allocation__c.object
<CustomObject>
    <description>ALSUR: Allocation of Orders to Associations</description>
    <fields>
        <fullName>Association__c</fullName>
        <label>Association</label>
        <referenceTo>Association__c</referenceTo>
        <relationshipLabel>CPA Order Allocations</relationshipLabel>
        <relationshipName>CPA_Order_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPA_Order__c</fullName>
        <label>CPA Order</label>
        <referenceTo>CPA_Order__c</referenceTo>
        <relationshipLabel>CPA Order Allocations</relationshipLabel>
        <relationshipName>CPA_Order_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>CPA_Order__r.Client_Product_Association__r.Client_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <formula>CPA_Order__r.Expected_Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Baskets__c</fullName>
        <label>Number of Baskets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Kilos__c</fullName>
        <label>Number of Kilos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_of_Presentation__c</fullName>
        <label>Number of Units of Presentation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Code__c</fullName>
        <formula>Association__r.Name + &apos;-&apos;+CPA_Order__r.Order_Code__c</formula>
        <label>Order Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentacion__c</fullName>
        <formula>TEXT(CPA_Order__r.Presentacion__c)</formula>
        <label>Presentación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_per_Kilo__c</fullName>
        <formula>CPA_Order__r.Price_per_Kilo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per Kilo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_Order__c</fullName>
        <description>Muestra el valor económico de cada orden</description>
        <formula>Price_per_Kilo__c * Number_of_Kilos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>CPA_Order__r.Client_Product_Association__r.Product_Name__c</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Allocated_Units_of_Presentation__c</fullName>
        <label>Total Allocated Units of Presentation</label>
        <summarizedField>Farmer_Order_Allocation__c.Number_of_Units_of_Presentation__c</summarizedField>
        <summaryForeignKey>Farmer_Order_Allocation__c.CPA_Order_Allocation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Allocated_Baskets__c</fullName>
        <label>Total Number of Allocated Baskets</label>
        <summarizedField>Farmer_Order_Allocation__c.Number_of_baskets__c</summarizedField>
        <summaryForeignKey>Farmer_Order_Allocation__c.CPA_Order_Allocation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Allocated_Kilos__c</fullName>
        <label>Total Number of Allocated Kilos</label>
        <summarizedField>Farmer_Order_Allocation__c.Number_of_Kilos__c</summarizedField>
        <summaryForeignKey>Farmer_Order_Allocation__c.CPA_Order_Allocation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unallocated_Baskets__c</fullName>
        <formula>Number_of_Baskets__c -  Total_Number_of_Allocated_Baskets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Baskets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unallocated_Kilos__c</fullName>
        <formula>Number_of_Kilos__c -  Total_Number_of_Allocated_Kilos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Kilos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unallocated_Units_of_Presentation__c</fullName>
        <formula>Number_of_Units_of_Presentation__c -  Total_Allocated_Units_of_Presentation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Units of Presentation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Presentation__c</fullName>
        <formula>TEXT(CPA_Order__r.Unit_of_Presentation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Presentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_group__c</fullName>
        <description>Agrupa las sucursales en un solo cliente</description>
        <formula>IF (  CONTAINS(Client__c, &apos;Éxito&apos;) , &apos;EXITO&apos;, (IF (  CONTAINS(Client__c, &apos;Alkosto&apos;) , &apos;ALKOSTO&apos;, (IF (  CONTAINS(Client__c, &apos;Agrofresco&apos;) , &apos;AGROFRESCO&apos;, (IF (  CONTAINS(Client__c, &apos;Cañaveral&apos;) , &apos;CAÑAVERAL&apos;, (IF (  CONTAINS(Client__c, &apos;Cencosud&apos;) , &apos;CENCOSUD&apos;, (IF (  CONTAINS(Client__c, &apos;Olimpica&apos;) , &apos;OLIMPICA&apos;,Client__c)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client group</label>
        <type>Text</type>
    </fields>
    <label>CPA Order Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CPA_Order__c</columns>
        <columns>Order_Code__c</columns>
        <columns>Client__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Association__c</columns>
        <columns>Unit_of_Presentation__c</columns>
        <columns>Number_of_Baskets__c</columns>
        <columns>Number_of_Kilos__c</columns>
        <columns>Number_of_Units_of_Presentation__c</columns>
        <columns>Price_per_Kilo__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPAON-{000}</displayFormat>
        <label>CPA Order Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPA Order Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>